# eco-base

./: .env.example  .env.local.example  .gitignore  .trufflehog-exclude.txt  ACTIONS_SHA.md  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_ADR.md  CI_CD_FIX_SUMMARY.md  CLOUDFLARE_PAGES_DEPLOYMENT_GUIDE.md  CLOUDFLARE_PAGES_SETUP.md  COMPLETE_FIX.md  CONFIGURATION_COMPLETE.md  CUSTOM_DOMAIN_SETUP.md  DEPLOYMENT_READY.md  DIRECTORY_TREE.md  ENTERPRISE_ENGINEERING_GUIDE.md  ENVIRONMENT_VARIABLES_BEST_PRACTICES.md  FORMAT_VALIDATION_PIPELINE.md  GITHUB_SECRETS_CONFIG.md  Makefile  PRODUCTION_IMPLEMENTATION_GUIDE.md  PROJECT_STRUCTURE.md  QUICK_FORMAT_REFERENCE.md  README.md  START_HERE.md  TOKENS_MANIFEST.md  docker-compose.yml  hashlock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  todo.md  validation-report.json  validation_errors_v6.txt
.circleci/: config.yml
.claude/config/: format-validation.json
.claude/hooks/: auto-fix-format.sh  pre-commit-validator.sh
.github/: ACTIONS_POLICY.md  CODEOWNERS  PULL_REQUEST_TEMPLATE.md  allowed-actions.yaml  dependabot.yml
.github/workflows/: argocd-diff-gate.yml  auto-assign.yml  auto-fix-ci.yaml  cd.yml  ci.yaml  (+58 more)
client/: index.html
cloudflare/: ARCHITECTURE.md
docker/: Dockerfile  Dockerfile.gpu  docker-compose.yml  prometheus.yml
docs/: DEVELOPER_GUIDE.md  gke-operations.md
gitops/: applicationset-eco-platforms.yaml
helm/: Chart.yaml  values.yaml
k8s/: k8s-manifests.yaml
mobile/: package.json  pnpm-lock.yaml
scripts/: build.sh  deploy.sh  import_guard.sh  pat-rotate.sh  platforms_refactor_retrieval.sh  root_guard.sh
server/: routers.ts  storage.ts
src/: __init__.py  app.py
supplychain/: hashlock.json
tests/: __init__.py  drill-eventbus-zone.sh  drill-flagger-rollback.sh  generate-immutable-rules-report.py
(+164 files in other folders)
